Improve mobile layout. Use layout 'left' only to avoid mobile layout broken

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,3 +9,7 @@
     box-shadow: none;
     height: 250px;
 }
+
+p, ul {
+    text-align: left;
+}
